# Ray-Marched-Newtonian-Black-Hole-in-OpenGL

./: .gitignore  Application.cpp  CMakeLists.txt  README.md  camera.cpp  camera.h  glad.c  object.fs  shader.cpp  shader.h
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
shader/: shader.fs  shader.vs
